--- a/sinatra/views/layout.erb
+++ b/sinatra/views/layout.erb
@@ -6,6 +6,9 @@
 <head>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
   <title><%= @app_name %></title>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js" type="text/javascript"></script>
+	<script src="/javascripts/highcharts.js" type="text/javascript"></script>
+	<%= yield_content :head %>
   <link rel="stylesheet" href="/css/stylesheet.css" type="text/css" media="screen" title="no title" charset="utf-8">
 </head>
 
