--- a/sinatra/views/segment.erb
+++ b/sinatra/views/segment.erb
@@ -2,14 +2,25 @@
 
 <h3>Datasets Submitted</h3>
 <table border="0" class="kv">
-  <tr><th></th><th class='header'>DAG Status</th><th class="header">Duration</th><th class="header">Current Job Status</th><th class='header'>Outcome</th></tr>
+  <tr class='header'>
+		<th>&nbsp;</th>
+		<th>DAG Status</th>
+		<th>Running?</th>
+		<th>Duration</th>
+		<th>Last update</th>
+		<th>Outcome</th>
+	</tr>
   <% @segment.datasets.each do |dataset| %>
     <tr>
 			<% executible_log = Scarcity::DagLog.new(File.join(dataset.directory, 'executibles.log')) %>
       <th><a href="<%= "/segments/#{@segment.name}/#{dataset.data_id}" %>"><%= dataset.data_id %></a></th>
       <td class="<%= dataset.status %>"><%= dataset.status %></td>
+			<td class="running_<%= dataset.running? %>"><%= dataset.running? ? 'running' : 'nope' %></td>
 			<td class="<%= dataset.status %>"><%= executible_log.duration %></td>
-			<td class="<%= dataset.status %>"><%= "#{executible_log.events.last.at.strftime("%D %r")} - #{executible_log.events.last.action}" unless executible_log.events.empty? %></td>
+			<%# Note that Condor Logfiles do not include Time Zone (+05:00 for %>
+			<%# America/Central'), so we've hacked DateTime.now to pretend to be %>
+			<%# the same time. #Kluge %>
+			<td class="<%= dataset.status %>"><%= "#{Time.diff(dataset.executible_log.events.last.at.utc, (DateTime.now + DateTime.now.offset).utc, "%H %N")[:diff]} ago" if dataset.running? %></td>
       <td><%= RETURN_CODES.message(dataset.return_value) %></td>
     </tr>
   <% end %>
