--- a/sinatra/views/segments.erb
+++ b/sinatra/views/segments.erb
@@ -1,12 +1,20 @@
 <h2>Current Data Processing Segments</h2>
 <table class="kv">
-	<thead><tr><th>Name</th><th>Running</th><th>Successful</th></tr></thead>
+	<thead><tr class="header">
+		<th>Name</th>
+		<th>Active</th>
+		<th>Running</th>
+		<th>Successful</th>
+		<th>Total</th>
+	</tr></thead>
 	<tbody>
 	  <% @segments.each do |segment| %>
 	    <tr>
 	    	<td><a href="segments/<%= segment.name %>"><%= segment.name %></a></td>
-				<td><%= running 		= segment.datasets.select{|d| d.status =~ /executing/}.count %></td>
+				<td><%= executing 	= segment.datasets.select{|d| d.status =~ /executing/}.count %></td>
+				<td><%= running 		= segment.datasets.select{|d| d.running? }.count %></td></td>
 				<td><%= successful 	= segment.datasets.select{|d| RETURN_CODES.message(d.return_value) == "Completed successfully" }.count %></td>
+				<td><%= total				= segment.datasets.count %></td>
 	    </tr>
 	  <% end %>
 		
